# WarehouseSourceGenerator

./: .gitignore  Cargo.toml  README.md
src/: employee.rs  feeding_report.rs  headcount_report.rs  health_report.rs  herd.rs  livestock.rs  main.rs  pasture.rs  snapshot.rs  species.rs  warehouse.rs
