[package]
name = "generator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
enum-map = "1.1"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }